@@ -392,6 +392,9 @@
 					<input type="checkbox" id="hideactivelistings"><label for="hideactivelistings" id="hideactivelistings_text">Hide all active listings on Market homepage by default</label>
 				</li>
 				<li>
+					<input type="checkbox" id="autocheckssa"><label for="autocheckssa" id="autocheckssa_text">Automatically check "Steam Subscriber Agreement" checkboxes upon Market listings</label>
+				</li>
+				<li>
 					<input type="checkbox" id="hidespamcomments"><label for="hidespamcomments" id="hidespamcomments_text">Hide spam comments from Workshop &amp; profiles</label><a id="show_spamcommentregex">(Customize)</a>
 				</li>
 				<li id="spamcommentregex_list">
